add right  side navigation

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.home-layout {
+  display: grid;
+  grid-template-columns: 1fr 2.5fr 1fr;
+}
