--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@
   grid-template-columns: 1fr 2.5fr 1fr;
 }
 
+.news-page-layout {
+  display: grid;
+  grid-template-columns: 3.5fr 1fr;
+}
+
 .news-scroll::-webkit-scrollbar {
   display: none;
 }
